# mtconnect_python_adapter

./: .gitignore  pyproject.toml  readme.md
src/mtconnect/: mtconnect_streams_1_7.py  mtstream.py  test_parser.py
src/mtconnect/schema/: __init__.py
src/mtconnect/schema/mtconnect_stream_schema_1_7/: __init__.py  mtconnect_streams_1_7.py
src/xsdata/: .xsdata.xml
test/test_data/: test_parser.py
tests/: eval_parser.py  test_against_current_xml.py  test_dataclass_traversal.py
